--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
     //facebook
     implementation 'com.facebook.android:facebook-android-sdk:16.0.0'
+    //ui
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
     //tests
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
