--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
         </activity>
         <activity
             android:name=".view.main.MainActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="true" />
     </application>
 
