fixed bug when edit dictionary data is empty

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ android {
     }
     flavorDimensions += "version"
     productFlavors {
+        local {
+            applicationIdSuffix = ".debug"
+            versionNameSuffix = "-debug"
+        }
         demo {
             dimension = "version"
             applicationIdSuffix = ".qa"
