--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,8 +19,15 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: gradle
-
+    - name: base64-to-file
+        uses: timheuer/base64-to-file@v1.2.4
+        with:
+          fileName: 'qa_key.jks'
+          encodedString: ${{ secrets.STAGING_ENCRYPTED_KEY_STORE }}
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew assembleDemoStaging
+      run: ./gradlew app:bundleDemoStaging
+      env:
+          STAGING_ALIAS: ${{ secrets.STAGING_ALIAS }}
+          STAGING_PASSWORD: ${{ secrets.STAGING_PASSWORD }}
