--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,10 @@ plugins {
 android {
     signingConfigs {
         qa {
-            storeFile file('/Users/mac/Android/Projects/EasyDictionary/app/qa_key.jks')
-            storePassword 'C0cs17pKpxIeNbGBYGZG5'
-            keyPassword 'C0cs17pKpxIeNbGBYGZG5'
-            keyAlias 'test'
+            storeFile file('qa_key.jks')
+            storePassword System.getenv("STAGING_PASSWORD")
+            keyPassword System.getenv("STAGING_PASSWORD")
+            keyAlias System.getenv("STAGING_ALIAS")
         }
     }
     namespace 'my.dictionary.free'
