--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-
+    name: Build Signed APK
     runs-on: ubuntu-latest
 
     steps:
@@ -19,10 +19,12 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: gradle
-    - name: base64-to-file
-        uses: timheuer/base64-to-file@v1.2.4
+    - name: Decode keystore file
+        id: decode_keystore
+        uses: timheuer/base64-to-file@v1.2
         with:
           fileName: 'qa_key.jks'
+          fileDir: './app/'
           encodedString: ${{ secrets.STAGING_ENCRYPTED_KEY_STORE }}
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
