--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,6 +28,9 @@ jobs:
         encodedString: ${{ secrets.STAGING_ENCRYPTED_KEY_STORE }}
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Check secret variable
+      run: |
+        echo "STAGING_PASSWORD is: '${{ secrets.STAGING_PASSWORD  }}'" # Output works
     - name: Build with Gradle
       run: ./gradlew app:bundleDemoStaging
       env:
