--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,7 +10,8 @@ jobs:
   build:
     name: Build Signed APK
     runs-on: ubuntu-latest
-
+    environment: staging
+    
     steps:
     - uses: actions/checkout@v3
     - name: set up JDK 17
