--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,11 +34,20 @@ jobs:
       env:
           STAGING_ALIAS: ${{ secrets.STAGING_ALIAS }}
           STAGING_PASSWORD: ${{ secrets.STAGING_PASSWORD }}
+    - name: Check for file
+      id: file_check
+      run: |
+        pwd
+        if git status -s | grep -x "** [app-demo-staging.aab]"; then
+        echo "check_result=true" >> $GITHUB_OUTPUT
+        else
+        echo "check_result=false" >> $GITHUB_OUTPUT
+        fi
     - name: upload to Firebase App Distribution
       uses: wzieba/Firebase-Distribution-Github-Action@v1
+      if: steps.file_check.outputs.check_result == 'true'
       with:
         appId: ${{secrets.STAGING_APP_ID}}
         serviceCredentialsFileContent: ${{ secrets.STAGING_CREDENTIAL_FILE_CONTENT }}
         groups: Testers
         file: app/build/outputs/bundle/demoStaging/app-demo-staging.aab
-        debug: true
