--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -50,5 +50,5 @@ jobs:
         appId: my.dictionary.free.qa
         serviceCredentialsFileContent: ${{secrets.STAGING_CREDENTIAL_FILE_CONTENT}}
         groups: Testers
-        file: app/build/outputs/bundle/demoStaging/app-demo-staging.aab
+        file: ./app/build/outputs/bundle/demoStaging/app-demo-staging.aab
         debug: true
