--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,7 +38,7 @@ jobs:
       id: file_check
       run: |
         pwd
-        if find . -type f -name "*.aok"; then
+        if find . -type f -name "*.apk"; then
         echo "check_result=true" >> $GITHUB_OUTPUT
         else
         echo "check_result=false" >> $GITHUB_OUTPUT
