--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew assembleDemoStaging
+      run: ./gradlew app:bundleDemoStaging
       env:
           STAGING_ALIAS: ${{ secrets.STAGING_ALIAS }}
           STAGING_PASSWORD: ${{ secrets.STAGING_PASSWORD }}
@@ -38,7 +38,7 @@ jobs:
       id: file_check
       run: |
         pwd
-        if find . -type f -name "*.apk"; then
+        if find . -type f -name "*.aab"; then
         echo "check_result=true" >> $GITHUB_OUTPUT
         else
         echo "check_result=false" >> $GITHUB_OUTPUT
@@ -50,7 +50,7 @@ jobs:
       with:
         appId: my.dictionary.free.qa
         serviceCredentialsFileContent: ${{secrets.STAGING_CREDENTIAL_FILE_CONTENT}}
-        file: ./app/build/outputs/apk/demoStaging/app-demo-staging.apk
+        file: ./app/build/outputs/bundle/demo/staging/app-demo-staging.aab
         debug: true
     - name: Assert outputs of previous step are not empty
       run: |
