--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,7 +38,7 @@ jobs:
       id: file_check
       run: |
         pwd
-        git config --global safe.directory '*'
+        git config --global --add safe.directory /github/workspace
         if find . -type f -name "*.aab"; then
         echo "check_result=true" >> $GITHUB_OUTPUT
         else
