--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,5 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
     id 'com.google.gms.google-services' version '4.4.0' apply false
     id("com.google.dagger.hilt.android") version "2.48.1" apply false
+    id 'com.google.firebase.appdistribution' version '4.0.1' apply false
 }
