--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -47,10 +47,4 @@ jobs:
       run: |
         git config --global --add safe.directory /github/workspace
     - name: upload to Firebase App Distribution
-      id: distrib_outputs
-      uses: hasretsariyer/firebase-app-distribution-github-action@v1.0
-      with:
-        app_id: ${{secrets.STAGING_APP_ID}}
-        firebase_token: 1//031HGEDcnfYf5CgYIARAAGAMSNwF-L9IrLW8mPiEF74X5oSSd2kLwctssqf-J2jybcoQ1TNw5axyDBYreZXjirTjtMs-oqk1sVas
-        app_file: ./app/build/outputs/bundle/demoStaging/app-demo-staging.aab
-        tester_groups: testers
+      run: ./gradlew appDistributionUploadDemoStaging
