--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -46,5 +46,7 @@ jobs:
     - name: Mark github workspace as safe
       run: |
         git config --global --add safe.directory /github/workspace
+    - name: Export Firebase token
+      run: export FIREBASE_TOKEN=${{secrets.STAGING_FIREBASE_TOKEN}}
     - name: upload to Firebase App Distribution
       run: ./gradlew appDistributionUploadDemoStaging
