added google credentials file

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -46,7 +46,14 @@ jobs:
     - name: Mark github workspace as safe
       run: |
         git config --global --add safe.directory /github/workspace
-    - name: Export Firebase token
-      run: export FIREBASE_TOKEN=${{secrets.STAGING_FIREBASE_TOKEN}}
+    - name: Decode service account credentials file
+      id: decode_keystore
+      uses: timheuer/base64-to-file@v1.2
+      with:
+        fileName: 'easy-dictionary-staging-credentials.json'
+        fileDir: './app/'
+        encodedString: ${{ secrets.STAGING_GOOGLE_CREDENTIALS }}
     - name: upload to Firebase App Distribution
       run: ./gradlew appDistributionUploadDemoStaging
+      env:
+        FIREBASE_TOKEN: ${{secrets.STAGING_FIREBASE_TOKEN}}
