--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,20 @@ plugins {
     id 'com.google.firebase.appdistribution'
 }
 
+def getCurrentGitBranch() {
+    def gitBranch = "default"
+    try {
+        def workingDir = new File("${project.projectDir}")
+        def result = 'git rev-parse --abbrev-ref HEAD'.execute(null, workingDir)
+        result.waitFor()
+        if (result.exitValue() == 0) {
+            gitBranch = result.text.trim()
+        }
+    } catch (e) {
+    }
+    return gitBranch
+}
+
 android {
     signingConfigs {
         qa {
@@ -63,7 +77,7 @@ android {
         demo {
             dimension = "version"
             applicationIdSuffix = ".qa"
-            versionNameSuffix = "-qa"
+            versionNameSuffix = "-qa-" + getCurrentGitBranch()
         }
     }
     compileOptions {
